@@ -1,3 +1,19 @@
+/*
+ * GeoGebra - Dynamic Mathematics for Everyone
+ * Copyright (c) GeoGebra GmbH, Altenbergerstr. 69, 4040 Linz, Austria
+ * https://www.geogebra.org
+ * 
+ * This file is licensed by GeoGebra GmbH under the EUPL 1.2 licence and
+ * may be used under the EUPL 1.2 in compatible projects (see Article 5
+ * and the Appendix of EUPL 1.2 for details).
+ * You may obtain a copy of the licence at:
+ * https://interoperable-europe.ec.europa.eu/collection/eupl/eupl-text-eupl-12
+ * 
+ * Note: The overall GeoGebra software package is free to use for
+ * non-commercial purposes only.
+ * See https://www.geogebra.org/license for full licensing details
+ */
+ 
 package org.geogebra.common.kernel.commands;
 
 import static org.geogebra.common.kernel.commands.CommandsConstants.TABLE_CAS;
@@ -69,7 +85,7 @@ public class CommandsValidationTest extends BaseUnitTest {
 	}
 
 	private boolean acceptsAnyArgType(Commands cmdName) {
-		return Arrays.asList(Commands.Delete,
+		return List.of(Commands.Delete,
 				Commands.ConstructionStep,
 				Commands.Text,
 				Commands.LaTeX,
@@ -86,7 +102,12 @@ public class CommandsValidationTest extends BaseUnitTest {
 				Commands.SelectObjects,
 				Commands.Dot, Commands.Cross,
 				Commands.SetConstructionStep,
-				Commands.TableText, Commands.SetValue).contains(cmdName);
+				Commands.TableText,
+				Commands.SetValue,
+				Commands.Row,
+				Commands.Column,
+				Commands.ColumnName
+		).contains(cmdName);
 	}
 
 	private void checkArgumentNumberValidation(String cmdName,
