@@ -1,3 +1,19 @@
+/*
+ * GeoGebra - Dynamic Mathematics for Everyone
+ * Copyright (c) GeoGebra GmbH, Altenbergerstr. 69, 4040 Linz, Austria
+ * https://www.geogebra.org
+ *
+ * This file is licensed by GeoGebra GmbH under the EUPL 1.2 licence and
+ * may be used under the EUPL 1.2 in compatible projects (see Article 5
+ * and the Appendix of EUPL 1.2 for details).
+ * You may obtain a copy of the licence at:
+ * https://interoperable-europe.ec.europa.eu/collection/eupl/eupl-text-eupl-12
+ *
+ * Note: The overall GeoGebra software package is free to use for
+ * non-commercial purposes only.
+ * See https://www.geogebra.org/license for full licensing details
+ */
+
 package org.geogebra.web.html5.util;
 
 import java.util.HashMap;
@@ -5,8 +21,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 
+import javax.annotation.CheckForNull;
+import javax.annotation.Nonnull;
+
+import org.geogebra.common.awt.MyImage;
 import org.geogebra.common.kernel.Construction;
 import org.geogebra.common.kernel.Kernel;
 import org.geogebra.common.kernel.Macro;
@@ -21,13 +40,13 @@ import org.geogebra.common.util.MD5Checksum;
 import org.geogebra.common.util.StringUtil;
 import org.geogebra.common.util.Util;
 import org.geogebra.common.util.debug.Log;
+import org.geogebra.web.awt.MyImageW;
 import org.geogebra.web.html5.Browser;
 import org.geogebra.web.html5.css.GuiResourcesSimple;
 import org.geogebra.web.html5.css.GuiResourcesSimpleImpl;
 import org.geogebra.web.html5.gui.util.Dom;
 import org.geogebra.web.html5.gui.util.NoDragImage;
 import org.geogebra.web.html5.main.GgbFile;
-import org.geogebra.web.html5.main.MyImageW;
 import org.geogebra.web.resources.SVGResource;
 import org.gwtproject.resources.client.ResourcePrototype;
 
@@ -67,6 +86,16 @@ public class ImageManagerW extends ImageManager {
 		if (fileName != null && src != null) {
 			addExternalImage(fileName, new ArchiveEntry(fileName, src));
 		}
+	}
+
+	@Override
+	public @CheckForNull MyImage getExternalImage(@Nonnull String path) {
+		if (externalImageTable.containsKey(path)) {
+			MyImageW myImageW = new MyImageW(externalImageTable.get(path),
+					FileExtensions.SVG.equals(StringUtil.getFileExtension(path)));
+			return myImageW;
+		}
+		return null;
 	}
 
 	/**
@@ -219,7 +248,7 @@ public class ImageManagerW extends ImageManager {
 		}
 		List<GeoElement> list = table.values().stream()
 				.filter(t -> t.isGeoImage() || t.getFillType() == FillType.IMAGE)
-				.collect(Collectors.toList());
+				.toList();
 		GeoElement.updateCascade(list);
 	}
 
